
[project]
dynamic = ["version", "description"]
name = "4Nyan"
authors = [{name = "Minnowo"}]
readme = "README.md"
license = { file = "LICENSE" } 
classifiers = []
requires-python = ">=3.7.6"
dependencies = [
    "uvicorn >= 0.17.6",
    "fastapi >= 0.75.0",
    "fastapi-login >= 1.8.0",
    "bcrypt >= 3.2.0",
    "numpy >= 1.21.6",
    "pillow >= 9.1.1",
    "opencv-python >= 4.5.5.64",
]


[tool.black]
line-length = 128